--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,17 @@
+title: It's a site
+email: elli_mylonas@brown.edu
+description: > # this means to ignore newlines until "baseurl:"
+  This site exists only on github, editing in teh repo
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: elli-m
+github_username:  emylonas
+
+# Build settings
+markdown: kramdown
 theme: jekyll-theme-tactile
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
