--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github_username:  emylonas
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-tactile
+theme: jekyll-theme-modernist
 gems:
   - jekyll-feed
 exclude:
