--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github_username:  emylonas
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-modernist
+theme: jekyll-theme-dinky
 gems:
   - jekyll-feed
 exclude:
